# my-dbus-app

./: CMakeLists.txt  README.md
dbus/: com.example.Demo.xml
src/: client.cpp  server.cpp
